# did-offchain

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 20250601135705_create_users_table.sql  20250603154355_create_user_role_enum.sql  20250603154428_create_users_table.sql
src/: lib.rs  main.rs  server.rs
src/errors/: mod.rs  user_errors.rs
src/handlers/: auth_handler.rs  did_handler.rs  mod.rs  user_handler.rs
src/models/: auth.rs  claims.rs  did.rs  mod.rs  user.rs
src/routes/: auth.rs  did.rs  mod.rs  user.rs
src/services/: auth_service.rs  did_service.rs  mod.rs  user_service.rs
src/settings/: jwt.rs
src/utils/: auth_guard.rs  jwt.rs  logger.rs  mod.rs  password.rs
tests/: api_test.rs
