[package]
name = "backend-boilerplate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend-boilerplate"


[dependencies]
actix = "0.13.1"
actix-web = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-actix-web = "0.7"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"  
argon2 = "0.5"
rand_core = { version = "0.9.3", features = ["std"] }
password-hash = "0.5"
thiserror = "2.0.12"
once_cell = "1.19"
futures-util = "0.3"

[dev-dependencies]
cargo-watch = "8.1.1"

